# entropy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  args.rs  deletor.rs  events.rs  filepicker.rs  main.rs  ui.rs
