[package]
name = "entropy-tui"
version = "0.1.0"
edition = "2021"
description = "a text editor where the letters deletes itself"
license = "MIT"
homepage = "https://github.com/jagath-sajjan/entropy"
repository = "https://github.com/jagath-sajjan/entropy"
readme = "README.md"
keywords = ["tui", "terminal", "game", "editor"]
categories = ["games", "command-line-utilities"]

[[bin]]
name = "entropy"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
